# learnicity

./: .gitignore  LICENSE  README.md  app.py  env.example  pyproject.toml  requirements.txt  translations.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/core/config/: __init__.py  config.py  logger.py
src/data/db/: __init__.py  commands.md  database.py  db.py  schema.prisma
src/data/models/: user.py
src/data/services/: user_service.py
src/llm/chains/: flashcard.py  quiz.py  search.py
src/llm/parsers/: flashcard_parser.py  json_parser.py  queries_parser.py  quiz_parser.py
src/llm/prompts/: fcard_prompts.py  quiz_prompts.py  search_prompts.py
src/llm/providers/: llama.py
src/llm/services/: jinareader.py
src/llm/store/: embedding.py  store.py
src/ui/components/: flashcard.py  header.py  quiz.py  search.py  sidebar.py  st_init.py  st_states.py  styles.css
src/ui/styles/: styles.css
