[tool.poetry]
name = "learnicity"
version = "0.1.0"
description = ""
authors = ["BlazzByte <nrwrntemporal2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"
prisma = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
