[tool.poetry]
name = "learnicity"
version = "0.1.0"
description = ""
authors = ["BlazzByte <nrwrntemporal2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.1"
colorama = "^0.4.6"
python-dotenv = "^1.0.1"
streamlit-local-storage = "^0.0.25"
langchain-openai = "^0.2.9"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.7"
sqlalchemy = "2.0.35"
google-search-results = "^2.4.2"
langchain-cohere = "^0.3.2"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false